Lab35revised2
/** lab3_main.c: Implements a front end for lab3_lib.c.
*
*
* Name: Jason Ho
* Email: ho3@purdue.edu
* Course: CNIT 315
* Lab batch: 315-008
* Lab assignment: 3
* Date: 2/25/2015
*
* Collaborators:
* -Cyrus Suttaria
*/

#include <time.h> //for time()
#include <stdio.h>
#include "lab3_lib.h"
#include <string.h>

int main()
{

int num_choice;
int addValue;
int location; //need to initialize location
int size=2; 
int *array_temp; // int *array_temp;  use this for malloc instead
int binaryValue;
int num_elements = 0; // we will want a count of how many elements the user put in since size will be off by two
int *point;


point = (int*) malloc(size * sizeof(int));

do
	{
  /*
  * You don't have to ask for the size of the array, set it to something temporary 
  * and reallocate as you go
  */
	//Determine the size of the array
  //	printf("Please define the size of the array.");
	//scanf("%d", &size);
	
	
	// -----------------------Prints the menu.--------------------------------
	
	printf("\n");
	printf("Welcome to the Lab 3.5 Sort and Search\n");
	printf("Please choose an option.\n");
	printf("1.) Add a new Value\n");
	printf("2.) Sort the Array\n");
	printf("3.) Search for a particular value\n");
	printf("4.) Exit\n");
	
	scanf("%d", &num_choice);

  size++;

switch(num_choice)
{
	case 1:
	
		
  	array_temp = (int*) realloc(point, size * sizeof(int));  
		
	  
	  if(array_temp != NULL) 
	  {
	    point = array_temp;
		  num_elements++;  // keeping track of how many elements are needed
		  
		  // Add a new value.
		  printf("Please input a value.");
		  scanf("%d", &addValue);
		  point[num_elements - 1] = addValue; // add the value to the array
		}
		else
		{
		  // remember to free up space for array
			printf("Error! The Memory is not allocated.");
			return 1;
		
		}
	
	break;
	
	case 2:
	
		//Insertion sort here.
		
    array_temp = (int*) malloc(size * sizeof(int));
		
		insertion_sort( point, size, array_temp);
		
		for( i = 0; i < size; i++)
		{
		
		  printf("%d\n",array_temp[i]);
		
		}
		
	
	break;
	
	case 3:
	
	  printf("Please input a value to search.");
	  scanf("%d", &binaryValue);
	
		// Binary search here.
		int binary_search(point, size, binaryValue, location); 
		
		printf("The value you are searching for is here: &d", location);
		
		//return 3;
	
	break;
	
	case 4:
	
	//Exit
	
	return 0;
	break;

}

	}while(1 == 1)
	
	//free up the arrays
	
	free(point);
	free(array_temp);
	
}


/*

revisions_lab3.c: In function ‘main’:
revisions_lab3.c:33:16: warning: incompatible implicit declaration of built-in function ‘malloc’ [enabled by default]
 point = (int*) malloc(size * sizeof(int));
                ^
revisions_lab3.c:65:24: warning: incompatible implicit declaration of built-in function ‘realloc’ [enabled by default]
    array_temp = (int*) realloc(point, size * sizeof(int));  
                        ^
revisions_lab3.c:96:8: error: ‘i’ undeclared (first use in this function)
   for( i = 0; i < size; i++)
        ^
revisions_lab3.c:96:8: note: each undeclared identifier is reported only once for each function it appears in
revisions_lab3.c:112:3: warning: parameter names (without types) in function declaration [enabled by default]
   int binary_search(point, size, binaryValue, location); 
   ^
revisions_lab3.c:114:3: warning: too many arguments for format [-Wformat-extra-args]
   printf("The value you are searching for is here: &d", location);
   ^
revisions_lab3.c:133:2: error: expected ‘;’ before ‘free’
  free(point);
  ^
revisions_lab3.c:134:2: warning: incompatible implicit declaration of built-in function ‘free’ [enabled by default]
  free(array_temp);
  ^


*/
